# starrover3

./: .gitignore  CMakeLists.txt  Makefile
share/: great_expectations_chapter_xv.txt
src/: main.c  main.cpp  namegen.cpp  namegen.h  politics.c  politics.h  random.c  random.h  space.c  space.cpp  space.h
src/sr3/: Constants.h  Econ.cpp  Econ.h  Main.cpp  Product.cpp  Product.h  Settlement.cpp  Settlement.h  SolarObject.cpp  SolarObject.h
