cmake_minimum_required (VERSION 2.6)
project (starrover3)
list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall")
find_package(SDL REQUIRED)
find_package(SDL_ttf REQUIRED)
find_library(M_LIB m)
include_directories(${SDL_INCLUDE_DIR})
add_executable(starrover3 src/main.cpp src/namegen.cpp src/politics.cpp src/random.cpp src/space.cpp)
target_link_libraries(starrover3 ${M_LIB})
