cmake_minimum_required (VERSION 2.6)
project (starrover3)
list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall")
find_library(m REQUIRED)
find_library(common REQUIRED)
find_library(GL REQUIRED)
find_package(SDL REQUIRED)
find_package(SDL_ttf REQUIRED)
find_package(SDL_image REQUIRED)
include_directories(${SDL_INCLUDE_DIR})
add_executable(starrover3 src/sr3/Product.cpp src/sr3/SolarObject.cpp src/sr3/Settlement.cpp src/sr3/Main.cpp)
target_link_libraries(starrover3 ${M_LIB} SDL SDL_ttf SDL_image GL common)
